--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -1,9 +1,9 @@
 *
   box-sizing: border-box
   -webkit-font-smoothing: antialiased
-
+  
 body
   margin: 0
-  font-family: 'Lato', sans-serif;
+  font-family: 'Lato', sans-serif
   -moz-osx-font-smoothing: grayscale
 
