--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -7,3 +7,12 @@ body
   font-family: 'Lato', sans-serif
   -moz-osx-font-smoothing: grayscale
 
+button
+  font-family: 'Lato', sans-serif
+  cursor: pointer
+
+input:focus,
+input:active
+  border: 1px solid #21CE99
+  outline: none
+
